# ai_engineering_tps_de24

./: .gitignore  README.md  pyproject.toml
03_gemeni/: gemeni.ipynb
04_pydantic/: housing.json  validate.ipynb  validation_without_pydantic.ipynb
05_pydantic_gemeni/: a_gemeni_pydantic.ipynb  b_gemeni_pydantic_robust.ipynb  library.json
06_fastapi/: api.py  data_processing.py  try_my_api.ipynb
08_pydantic_chatbot/: chat.py  chat_eda.ipynb  frontend.py
09_lancedb_vector/: animals_text_embeddings.json  jokes.json  lancedb_eda.ipynb
video_alongs/05_pydantic_gemeni/: b_gemeni_pydantic_robust.ipynb  cheap_houses.csv
video_alongs/06_fastapi/: api.py  constants.py  data_processing.py
video_alongs/07_pydanticAI_fundamentals/: cv.duckdb  pydanticAI_model.ipynb
video_alongs/10_pydantic_rag/: api.py  explorations.ipynb  ingestion.py  pdfs_to_text.py
video_alongs/10_pydantic_rag/backend/: constants.py  data_models.py  rag.py
video_alongs/10_pydantic_rag/data/: dwarf_hotot.txt  dwarf_rabbit.txt  holland_lop.txt  netherland_dwarf_rabbit.txt
video_alongs/10_pydantic_rag/frontend/: app.py
video_alongs/10_pydantic_rag/knowledge_base/articles.lance/_transactions/: 0-1101a480-29a8-4c00-9d3d-0a95a560ddc4.txn  1-e3004f69-9296-4355-8259-cca0162e317b.txn  2-e7c26e81-0f10-4c64-98c2-14c07c3ea5d1.txn  3-e8fbb96a-7645-469a-b10b-9316d49089a2.txn  4-6ede6671-602b-48fa-8703-9806fd19b0a6.txn  5-1f25d084-f62f-4227-bb2d-a02908758d66.txn  6-e2131f54-578c-4922-b126-0f951439848a.txn  7-ab1f1715-e950-497e-b44a-b7fe3fc6ebf0.txn  8-519a0539-d8c0-4eb6-b493-e39434f5ac49.txn
