[project]
name = "ai-engineering-tps-de24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb]>=1.18.2",
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "google-genai>=1.51.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "lancedb>=0.25.3",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic-ai>=1.22.0",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
